--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "app",
+  "name": "@brlaney/3wd-pwd",
+  "version": "1.0.0",
+  "description": "A CLI to generate a smart & secure password.",
   "author": "Laney, Brendan",
   "license": "MIT",
   "keywords": [
-    "node",
-    "password generator",
-    "security"
+    "cli",
+    "3wd-pwd"
   ],
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
+  "bin": {
+    "@brlaney/3wd-pwd": "bin/3wd-pwd",
+    "3wd-pwd": "bin/3wd-pwd"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "arg": "^5.0.1",
+    "esm": "^3.2.25",
+    "inquirer": "^8.1.5",
     "node-fetch": "^3.0.0"
-  },
-  "type": "module"
+  }
 }
