--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "dependencies": {
     "arg": "^5.0.1",
     "esm": "^3.2.25",
